cmake_minimum_required(VERSION 3.10)
project(base_source)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Og -Wall -Wextra -Werror -std=gnu11 -fPIC")
option(BUILD_TESTS "Build test apps" ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/abstract/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/logger/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/data_structure/include)

add_subdirectory(third_party)
add_subdirectory(logger)
add_subdirectory(signal_handler)
add_subdirectory(mon_impl)
add_subdirectory(data_structure)
add_subdirectory(abstract)