project(blogger)
set(logger_src ${CMAKE_CURRENT_SOURCE_DIR}/src/blogger.c)
add_library(${PROJECT_NAME} STATIC ${logger_src})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
if (BUILD_TESTS)
add_executable(logger_test ${CMAKE_CURRENT_SOURCE_DIR}/test/logger_test.c)
target_link_libraries(logger_test PRIVATE ${PROJECT_NAME})
target_include_directories(logger_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
endif(BUILD_TESTS)