set(library_name blogger)
set(logger_src ${CMAKE_CURRENT_SOURCE_DIR}/src/blogger.c)
add_library(${library_name} STATIC ${logger_src})
target_include_directories(${library_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
if (BUILD_TESTS)
add_executable(logger_test ${CMAKE_CURRENT_SOURCE_DIR}/test/logger_test.c)
target_link_libraries(logger_test PRIVATE ${library_name})
target_include_directories(logger_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
endif(BUILD_TESTS)