set(library_name threadpool)
set(${library_name}_src     ${CMAKE_CURRENT_SOURCE_DIR}/src/threadpool.c)
add_library(${library_name} STATIC ${${library_name}_src})
target_include_directories(${library_name} PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${library_name} blogger base_abstract)
if (BUILD_TESTS)
add_subdirectory(test)
endif(BUILD_TESTS)